63_youtube_creator/pipeline/regen_err.txt
  File "<string>", line 2
    import
          ^
SyntaxError: invalid syntax
